# studious-chainsaw

./: .gitignore  .testcontainers.properties  Build-GhidraPlugins.ps1  CONTEXT_QUICK_REFERENCE.md  Dockerfile  EXECUTION_QUICK_START.md  GPU_ACCELERATION_REPORT.md  LOG_MANAGEMENT_SETUP.md  MCP_PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  deploy-mcp-production.ps1  deploy-to-k8s.bat  deploy-to-k8s.sh  docker-compose.production.yml  docker-compose.yml  download_cuda.bat  install_cuda_toolkit.ps1  install_lattice_tools.bat  k8s-deployments.yaml  k8s-monitoring.yaml  k8s-namespace.yaml  k8s-services.yaml  k8s-storage.yaml  launch-workspace.bat  mcp-health-monitor.js  mcp-production-config.yaml  mcp_orchestrator_v2_review.md  production_api_server.py  refactoring_report.txt  setup.py  start_reactive_migration.py  stoopidpc-deployment.yaml  test_webhook_manager_reactive.py  webhook_advanced_operators.py  webhook_hot_cold_observables.py  webhook_integrations.py  webhook_manager.py  webhook_manager_reactive.py  webhook_monitoring.py  webhook_reactive_flowchart.py  (+3 more)
development/: .env.example  .eslintrc.js  .gitignore  ACTIVE_PROJECTS_INVENTORY.md  AGENTIC_ANALYSIS_REPORT.md  AGENT_CONFIGURATION_ANALYSIS.md  ARBITRARY_IMAGE_SCENARIO_DEFENSE_VALIDATION.md  B_MAD_DEPLOYMENT_COMPLETE.md  B_MAD_REDIS_OPTIMIZATION_COMPLETE.md  CLEANUP_EXECUTION_PLAN.md  COMMANDS_AND_SHORTCUTS_IMPLEMENTATION_PLAN.md  DEPLOYMENT_COMPLETE_2025-10-05.md  DIRECTORY_REFACTORING_ASSESSMENT.md  DOCUMENTATION_CLEANUP_COMPLETE.md  DOCUMENTATION_STRUCTURE_REVIEW.md  Dockerfile.catalytic  Dockerfile.ghidra-ml  (+113 more)
(+1987 files in other folders)
