[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "development-environment"
version = "1.0.0"
description = "Optimized development environment with GPU computing"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # Line too long (handled by formatter)
    "B008", # Do not perform function calls in argument defaults
    "C901", # Function is too complex
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["B011"]
"**/tests/*.py" = ["B011"]
"**/*_test.py" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "services", "monitoring"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"